--- a/admin/index.html
+++ b/admin/index.html
@@ -14,9 +14,9 @@
         <a class="navigationTab" href="../index.html">Main</a>
         <a class="navigationTab" href="../news">News</a>
         <div class="dropdown">
-            <a class="navigationTab dropButton" href="../forFans/funClub">For fans</a>
+            <a class="navigationTab dropButton" href="../forFans/fanClub">For fans</a>
             <div class="dropdownContent">
-                <a href="../forFans/funClub">Fun club</a>
+                <a href="../forFans/fanClub">Fun club</a>
                 <a href="../forFans/tourSchedule">Tour schedule</a>
                 <a href="../forFans/lyrics">Lyrics</a>
             </div>
