--- a/fansAppeal/index.html
+++ b/fansAppeal/index.html
@@ -14,9 +14,9 @@
         <a class="navigationTab" href="../index.html">Main</a>
         <a class="navigationTab" href="../news">News</a>
         <div class="dropdown">
-            <a class="navigationTab dropButton" href="../forFans/funClub">For fans</a>
+            <a class="navigationTab dropButton" href="../forFans/fanClub">For fans</a>
             <div class="dropdownContent">
-                <a href="../forFans/funClub">Fun club</a>
+                <a href="../forFans/fanClub">Fun club</a>
                 <a href="../forFans/tourSchedule">Tour schedule</a>
                 <a href="../forFans/lyrics">Lyrics</a>
             </div>
@@ -27,7 +27,42 @@
     </nav>
 </header>
 <main>
-
+    <article>
+        <div class="commentSection">
+            <div class="commentDetail">
+                <p>Fan name</p>
+                <p>22:22</p>
+                <p>09.09.2019</p>
+            </div>
+            <p class="commentContent">
+                My comment
+            </p>
+        </div>
+        <div class="commentSection">
+            <div class="commentDetail">
+                <p>Fan name</p>
+                <p>22:22</p>
+                <p>09.09.2019</p>
+            </div>
+            <p class="commentContent">
+                My comment
+            </p>
+        </div>
+        <div class="commentSection">
+            <div class="commentDetail">
+                <p>Fan name</p>
+                <p>22:22</p>
+                <p>09.09.2019</p>
+            </div>
+            <p class="commentContent">
+                My comment
+            </p>
+        </div>
+        <form id="commentForm">
+            <button id="sendButton" type="button">Send</button>
+            <textarea rows="4" placeholder="Write a comment..."></textarea>
+        </form>
+    </article>
 </main>
 <footer>
     <p id="contactInfo"><em>CONTACT INFO</em></p>
