--- a/forFans/lyrics/index.html
+++ b/forFans/lyrics/index.html
@@ -14,9 +14,9 @@
         <a class="navigationTab" href="../../index.html">Main</a>
         <a class="navigationTab" href="../../news">News</a>
         <div class="dropdown">
-            <a class="navigationTab dropButton" href="../funClub">For fans</a>
+            <a class="navigationTab dropButton" href="../fanClub">For fans</a>
             <div class="dropdownContent">
-                <a href="../funClub">Fun club</a>
+                <a href="../fanClub">Fun club</a>
                 <a href="../tourSchedule">Tour schedule</a>
                 <a href="index.html">Lyrics</a>
             </div>
