--- a/forFans/tourSchedule/index.html
+++ b/forFans/tourSchedule/index.html
@@ -14,9 +14,9 @@
         <a class="navigationTab" href="../../index.html">Main</a>
         <a class="navigationTab" href="../../news">News</a>
         <div class="dropdown">
-            <a class="navigationTab dropButton" href="../funClub">For fans</a>
+            <a class="navigationTab dropButton" href="../fanClub">For fans</a>
             <div class="dropdownContent">
-                <a href="../funClub">Fun club</a>
+                <a href="../fanClub">Fun club</a>
                 <a href="index.html">Tour schedule</a>
                 <a href="../lyrics">Lyrics</a>
             </div>
@@ -27,7 +27,37 @@
     </nav>
 </header>
 <main>
-
+    <article>
+        <img id="tourPhoto" src="../../img/neffexEuropeanTour.jpg" alt="Tour Photo">
+        <table id="scheduleTable" border="1">
+            <caption>Tour schedule</caption>
+            <tr id="tableHeaders">
+                <td>Date of performance</td>
+                <td>City</td>
+                <td>Performance time</td>
+            </tr>
+            <tr>
+                <td>OCT 17</td>
+                <td>Berlin, Germany</td>
+                <td>8:00pm</td>
+            </tr>
+            <tr>
+                <td>OCT 18</td>
+                <td>Hamburg, Germany</td>
+                <td>8:00pm</td>
+            </tr>
+            <tr>
+                <td>OCT 31</td>
+                <td>Paris, France</td>
+                <td>8:00pm</td>
+            </tr>
+            <tr>
+                <td>NOV 1</td>
+                <td>Salford, Great Britain</td>
+                <td>8:00pm</td>
+            </tr>
+        </table>
+    </article>
 </main>
 <footer>
     <p id="contactInfo"><em>CONTACT INFO</em></p>
