--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
         <a class="navigationTab" href="index.html">Main</a>
         <a class="navigationTab" href="news">News</a>
         <div class="dropdown">
-            <a class="navigationTab dropButton" href="forFans/funClub">For fans</a>
-            <div class="dropdownContent">
-                <a href="forFans/funClub">Fun club</a>
+            <a class="navigationTab dropButton" href="forFans/fanClub">For fans</a>
+            <nav class="dropdownContent">
+                <a href="forFans/fanClub">Fun club</a>
                 <a href="forFans/tourSchedule">Tour schedule</a>
                 <a href="forFans/lyrics">Lyrics</a>
-            </div>
+            </nav>
         </div>
         <a class="navigationTab" href="fansAppeal">Fans appeal</a>
         <a class="navigationTab" href="concertVenue">Concert venue</a>
         <a class="navigationTab" href="admin">Admin</a>
     </nav>
 </header>
-<main>
+<div>
+    <div class="glitch"></div>
+    <main>
     <article>
         <div class="centerDiv"><img id="bandPhoto" src="img/NeffexBand.jpg" alt="Band photo"></div>
         <h1>About NEFFEX</h1>
@@ -86,6 +88,7 @@
         </p>
     </article>
 </main>
+</div>
 <footer>
     <p id="contactInfo"><em>CONTACT INFO</em></p>
     <nav>
