--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
 
     <title>NEFFEX</title>
 
@@ -44,7 +42,7 @@
     </nav>
 </header>
 <main>
-    <div class="container pt-4">
+    <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="glitch"></div>
