--- a/forFans/tourSchedule/index.html
+++ b/forFans/tourSchedule/index.html
@@ -2,60 +2,85 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>NEFFEX</title>
+
     <link rel="shortcut icon" href="../../img/favicon.ico" />
+    <link type="text/css" rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="../../css/main.css">
     <link type="text/css" rel="stylesheet" href="../../css/forFansPage.css">
 </head>
 <body>
-<header class="shadowing">
-    <nav id="topBar">
-        <img id="logo" src="../../img/Logo.png" alt="Logo"/>
-        <a class="navigationTab" href="../../index.html">Main</a>
-        <a class="navigationTab" href="../../news">News</a>
-        <div class="dropdown">
-            <a class="navigationTab dropButton" href="../fanClub">For fans</a>
-            <div class="dropdownContent">
-                <a href="../fanClub">Fun club</a>
-                <a href="index.html">Tour schedule</a>
-                <a href="../lyrics">Lyrics</a>
-            </div>
+<header>
+    <nav class="navbar navbar-custom navbar-dark navbar-expand-md fixed-top shadow-sm">
+        <span href="index.html" class="navbar-brand"><img class="logo" src="../../img/Logo.png" alt="Logo"/></span>
+        <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler">
+            <span class="navbar-toggler-icon"></span></button>
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+            <ul class="navbar-nav mx-md-auto ml-auto">
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../../index.html">Main</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../../news">News</a></li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link nav-link-custom-style dropButton" href="#">For fans</a>
+                        <nav class="dropdownContent">
+                            <a href="../../forFans/fanClub">Fun club</a>
+                            <a href="index.html">Tour schedule</a>
+                            <a href="../../forFans/lyrics">Lyrics</a>
+                        </nav>
+                    </div>
+                </li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../../fansAppeal">Fans appeal</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../../concertVenue">Concert venue</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../../admin">Admin</a></li>
+            </ul>
         </div>
-        <a class="navigationTab" href="../../fansAppeal">Fans appeal</a>
-        <a class="navigationTab" href="../../concertVenue">Concert venue</a>
-        <a class="navigationTab" href="../../admin">Admin</a>
     </nav>
 </header>
 <main>
+    <section class="container">
+        <div class="row">
+            <div class="col-12 mx-auto text-center mb-2">
+                <img class="img-fluid" src="../../img/neffexEuropeanTour.jpg" alt="Tour Photo">
+            </div>
+        </div>
+    </section>
     <article>
-        <img id="tourPhoto" src="../../img/neffexEuropeanTour.jpg" alt="Tour Photo">
-        <table id="scheduleTable" border="1">
-            <caption>Tour schedule</caption>
-            <tr id="tableHeaders">
-                <td>Date of performance</td>
-                <td>City</td>
-                <td>Performance time</td>
-            </tr>
-            <tr>
-                <td>OCT 17</td>
-                <td>Berlin, Germany</td>
-                <td>8:00pm</td>
-            </tr>
-            <tr>
-                <td>OCT 18</td>
-                <td>Hamburg, Germany</td>
-                <td>8:00pm</td>
-            </tr>
-            <tr>
-                <td>OCT 31</td>
-                <td>Paris, France</td>
-                <td>8:00pm</td>
-            </tr>
-            <tr>
-                <td>NOV 1</td>
-                <td>Salford, Great Britain</td>
-                <td>8:00pm</td>
-            </tr>
+        <table class="table table-bordered table-striped table-hover">
+            <caption class="text-center"><h3><em>Tour schedule</em></h3></caption>
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Date of performance</th>
+                    <th scope="col">City</th>
+                    <th scope="col">Performance time</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>OCT 17</td>
+                    <td>Berlin, Germany</td>
+                    <td>8:00pm</td>
+                </tr>
+                <tr>
+                    <td>OCT 18</td>
+                    <td>Hamburg, Germany</td>
+                    <td>8:00pm</td>
+                </tr>
+                <tr>
+                    <td>OCT 31</td>
+                    <td>Paris, France</td>
+                    <td>8:00pm</td>
+                </tr>
+                <tr>
+                    <td>NOV 1</td>
+                    <td>Salford, Great Britain</td>
+                    <td>8:00pm</td>
+                </tr>
+            </tbody>
         </table>
     </article>
 </main>
@@ -70,5 +95,7 @@
     </nav>
     <p>Founded in 2014</p>
 </footer>
+<script src="../../bootstrap/js/jquery.slim.min.js"></script>
+<script src="../../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
