--- a/concertVenue/index.html
+++ b/concertVenue/index.html
@@ -2,32 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NEFFEX</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>NEFFEX: Concert Venue</title>
+
     <link rel="shortcut icon" href="../img/favicon.ico" />
+    <link type="text/css" rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="../css/main.css">
     <link type="text/css" rel="stylesheet" href="../css/concertVenuePage.css">
 </head>
 <body>
-<header class="shadowing">
-    <nav id="topBar">
-        <img id="logo" src="../img/Logo.png" alt="Logo"/>
-        <a class="navigationTab" href="../index.html">Main</a>
-        <a class="navigationTab" href="../news">News</a>
-        <div class="dropdown">
-            <a class="navigationTab dropButton" href="../forFans/fanClub">For fans</a>
-            <div class="dropdownContent">
-                <a href="../forFans/fanClub">Fun club</a>
-                <a href="../forFans/tourSchedule">Tour schedule</a>
-                <a href="../forFans/lyrics">Lyrics</a>
-            </div>
+<header>
+    <nav class="navbar navbar-custom navbar-dark navbar-expand-md fixed-top shadow-sm">
+        <span href="index.html" class="navbar-brand"><img class="logo" src="../img/Logo.png" alt="Logo"/></span>
+        <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler">
+            <span class="navbar-toggler-icon"></span></button>
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+            <ul class="navbar-nav mx-md-auto ml-auto">
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../index.html">Main</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../news">News</a></li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link nav-link-custom-style dropButton" href="#">For fans</a>
+                        <nav class="dropdownContent">
+                            <a href="../forFans/fanClub">Fun club</a>
+                            <a href="../forFans/tourSchedule">Tour schedule</a>
+                            <a href="../forFans/lyrics">Lyrics</a>
+                        </nav>
+                    </div>
+                </li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../fansAppeal">Fans appeal</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="index.html">Concert venue</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../admin">Admin</a></li>
+            </ul>
         </div>
-        <a class="navigationTab" href="../fansAppeal">Fans appeal</a>
-        <a class="navigationTab" href="index.html">Concert venue</a>
-        <a class="navigationTab" href="../admin">Admin</a>
     </nav>
 </header>
 <main>
-
+    <article>
+        <h1 class="text-center mb-5">The place of the next concert</h1>
+        <div class="container">
+            <div class="row mb-5">
+                <img class="col-12 mx-auto img-fluid" src="../img/concertAddress.png" alt="Concert Address">
+            </div>
+            <div class="row">
+                <p class="col-12 pt-3 pb-3 text-center shadow">
+                    Thursday, October 31, 2019 at 7:00 PM – 10:00 PM UTC+01<br>
+                    Address: Les Etoiles, 61 Rue du Château d'Eau, 75010 Paris, France<br>
+                    Click <a href="https://bit.ly/2IsnZot">here</a> for details
+                </p>
+            </div>
+            <div class="row">
+                <div class="mx-auto m-5 text-center">
+                    <button class="btn btn-secondary pl-5 pr-5" type="button">Buy a ticket now!!!</button>
+                </div>
+            </div>
+        </div>
+    </article>
 </main>
 <footer>
     <p id="contactInfo"><em>CONTACT INFO</em></p>
@@ -40,5 +74,7 @@
     </nav>
     <p>Founded in 2014</p>
 </footer>
+<script src="../bootstrap/js/jquery.slim.min.js"></script>
+<script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
