--- a/fansAppeal/index.html
+++ b/fansAppeal/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="row shadow-sm mb-4">
-                <div class="col-2 order-1 mx-auto text-center">
+                <div class="col-2 order-1 mx-auto mb-3 text-center align-self-end">
                     <button class="btn btn-primary" type="button">Send</button>
                 </div>
                 <div class="col-10 order-2 form-group shadow-textarea">
