--- a/forFans/tourSchedule/index.html
+++ b/forFans/tourSchedule/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>NEFFEX</title>
+    <title>NEFFEX: Tour Schedule</title>
 
     <link rel="shortcut icon" href="../../img/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
