--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler">
-            <span class="navbar-toggler-icon"></span></button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav mx-md-auto ml-auto">
                 <li class="nav-item"><a class="nav-link nav-link-custom-style" href="index.html">Main</a></li>
