added caching configurations

--- a/concertVenue/index.html
+++ b/concertVenue/index.html
@@ -19,24 +19,25 @@
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler">
-            <span class="navbar-toggler-icon"></span></button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav mx-md-auto ml-auto">
                 <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../index.html">Main</a></li>
-                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../news">News</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../news/index.html">News</a></li>
                 <li class="nav-item">
                     <div class="dropdown">
                         <a class="nav-link nav-link-custom-style dropButton" href="#">For fans</a>
                         <nav class="dropdownContent">
-                            <a href="../forFans/fanClub">Fun club</a>
-                            <a href="../forFans/tourSchedule">Tour schedule</a>
-                            <a href="../forFans/lyrics">Lyrics</a>
+                            <a href="../forFans/fanClub/index.html">Fun club</a>
+                            <a href="../forFans/tourSchedule/index.html">Tour schedule</a>
+                            <a href="../forFans/lyrics/index.html">Lyrics</a>
                         </nav>
                     </div>
                 </li>
-                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../fansAppeal">Fans appeal</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../fansAppeal/index.html">Fans appeal</a></li>
                 <li class="nav-item"><a class="nav-link nav-link-custom-style" href="index.html">Concert venue</a></li>
-                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../admin">Admin</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="../admin/index.html">Admin</a></li>
             </ul>
         </div>
     </nav>
