--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="manifest.appcache">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,20 +24,20 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav mx-md-auto ml-auto">
                 <li class="nav-item"><a class="nav-link nav-link-custom-style" href="index.html">Main</a></li>
-                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="news">News</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="news/index.html">News</a></li>
                 <li class="nav-item">
                     <div class="dropdown">
                         <a class="nav-link nav-link-custom-style dropButton" href="#">For fans</a>
                         <nav class="dropdownContent">
-                            <a href="forFans/fanClub">Fun club</a>
-                            <a href="forFans/tourSchedule">Tour schedule</a>
-                            <a href="forFans/lyrics">Lyrics</a>
+                            <a href="forFans/fanClub/index.html">Fun club</a>
+                            <a href="forFans/tourSchedule/index.html">Tour schedule</a>
+                            <a href="forFans/lyrics/index.html">Lyrics</a>
                         </nav>
                     </div>
                 </li>
-                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="fansAppeal">Fans appeal</a></li>
-                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="concertVenue">Concert venue</a></li>
-                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="admin">Admin</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="fansAppeal/index.html">Fans appeal</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="concertVenue/index.html">Concert venue</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-custom-style" href="admin/index.html">Admin</a></li>
             </ul>
         </div>
     </nav>
