--- a/fansAppeal/index.html
+++ b/fansAppeal/index.html
@@ -68,7 +68,7 @@
     </nav>
     <p>Founded in 2014</p>
 </footer>
-<script src="../js/fansAppeal.js"></script>
+<script src="../js/fansAppeal.js" type="text/javascript"></script>
 <script src="../bootstrap/js/jquery.slim.min.js"></script>
 <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
