--- a/admin/index.html
+++ b/admin/index.html
@@ -81,6 +81,7 @@
     </nav>
     <p>Founded in 2014</p>
 </footer>
+<script src="../js/storage.js" type="text/javascript"></script>
 <script src="../js/admin.js" type="text/javascript"></script>
 <script src="../bootstrap/js/jquery.slim.min.js"></script>
 <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
